--- a/package.json
+++ b/package.json
@@ -4,8 +4,52 @@
   "description": "an online survey application",
   "main": "index.js",
   "scripts": {
+    "setup-project": "npm i && cd client && npm i",
+    "dev": "nodemon src/index.js",
+    "server": "nodemon src/index.js --ignore client",
+    "build-client": "cd client && npm run build",
+    "start": "concurrently -kill-others-on-fail \"npm run server\" \" cd client && npm run dev\"",
+    "setup-production": "npm run install-client && npm run build-client && npm install",
+    "install-client": "cd client && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "khaled-nadam",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@babel/preset-env": "^7.23.5",
+    "@google-cloud/storage": "^7.9.0",
+    "babel-jest": "^29.7.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csrf-csrf": "^3.0.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "http-status": "^1.7.3",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "pusher": "^5.2.0",
+    "ts-jest": "^29.1.1",
+    "validator": "^13.11.0",
+    "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.3"
+  }
 }
