--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.3"
