--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "setup-project": "npm i && cd client && npm i",
-    "dev": "nodemon src/index.js",
+    "dev": "concurrently --kill-others-on-fail \"nodemon src/index.js\" \"cd client && npm run dev\"",
     "server": "nodemon src/index.js --ignore client",
     "build-client": "cd client && npm run build",
 		"start": "node src/index.js",
