--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lbgm/phone-number-input": "^1.1.6-alpha.2",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "clipboard": "^2.0.11",
