--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lbgm/phone-number-input": "^1.1.6-alpha.2",
     "@vueuse/core": "^10.9.0",
+    "auto-typer-vue3": "^1.2.3",
     "axios": "^1.6.8",
     "clipboard": "^2.0.11",
     "lodash.debounce": "^4.0.8",
