--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@vueuse/core": "^10.9.0",
     "auto-typer-vue3": "^1.2.3",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "clipboard": "^2.0.11",
     "lodash.debounce": "^4.0.8",
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.1",
     "vue-clipboard3": "^2.0.0",
     "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.3.2",
